# tiny_web_pi

./: CMakeLists.txt  README.md  main.c
app/sys_manage/: sys_manage.c
app/sys_time/: sys_time.c
common/: common_def.h
include/: debug.h  http.h  list.h  packet_parser.h  socket.h  sys_manage.h  sys_time.h  thread_pool.h
platform/debug/: debug.c
platform/ds/: list.c
platform/http/: http.c
platform/http/page/: main.html
platform/logs/: log.txt
platform/packet_parser/: README.md  packet_parser.c
platform/socket/: socket.c
platform/thread_pool/: thread_pool.c
